--- a/.github/workflows/deploy-windows.yml
+++ b/.github/workflows/deploy-windows.yml
@@ -1,4 +1,5 @@
 name: Deploy-Test-Cleanup (v2) Windows
+
 on:
   # pull_request:
   #   branches:
@@ -94,7 +95,10 @@ on:
         
   # schedule:
   #   - cron: "0 5,17 * * *" # Runs at 5:00 AM and 5:00 PM GMT
-
+permissions:
+  contents: read
+  actions: read
+  
 jobs:
   Run:
     uses: ./.github/workflows/deploy-orchestrator.yml
