--- a/.github/workflows/job-cleanup-deployment.yml
+++ b/.github/workflows/job-cleanup-deployment.yml
@@ -56,6 +56,9 @@ on:
         type: string
         default: ''
 
+permissions:
+  contents: read
+  actions: read
 jobs:
   cleanup-deployment:
     runs-on: ${{ inputs.runner_os }}
