--- a/.github/workflows/test-automation-v2.yml
+++ b/.github/workflows/test-automation-v2.yml
@@ -1,4 +1,4 @@
-name: Test Automation DocGen-v2
+name: Test Automation FabricSQL-V2
 
 on:
     workflow_call:
@@ -22,9 +22,13 @@ on:
 
 env:
     url: ${{ inputs.TEST_URL }}
-    accelerator_name: "DocGen"
+    accelerator_name: "FabricSQL"
     test_suite: ${{ inputs.TEST_SUITE }}
 
+permissions:
+  contents: read
+  actions: read
+  
 jobs:
   test:
     runs-on: ubuntu-latest
